--- a/package.json
+++ b/package.json
@@ -44,21 +44,21 @@
     "@loaders.gl/obj": "^3.0.13",
     "@loaders.gl/ply": "^3.0.13",
     "@loaders.gl/polyfills": "^3.0.13",
-    "@zip.js/zip.js": "^2.2.38",
+    "@zip.js/zip.js": "^2.3.22",
     "earcut": "^2.2.2",
     "fs": "0.0.1-security",
     "jszip": "^3.6.0",
     "jszip-sync": "^3.2.1-sync",
     "path": "^0.12.7",
     "request": "^2.79.0",
-    "web-ifc": "^0.0.30",
+    "web-ifc": "file:../../../web-ifc/web-ifc/dist",
     "xmldom": "^0.6.0"
   },
   "devDependencies": {
     "@percy/script": "^1.1.0",
     "@rollup/plugin-commonjs": "^15.1.0",
     "@xeokit/xeokit-sdk": "2.2.1",
-    "autoprefixer": "^9.8.5",
+    "autoprefixer": "^9.8.8",
     "esdoc": "^1.1.0",
     "esdoc-node": "^1.0.5",
     "esdoc-standard-plugin": "^1.0.0",
@@ -66,7 +66,7 @@
     "puppeteer": "^10.4.0",
     "puppeteer-firefox": "^0.5.1",
     "rimraf": "^3.0.2",
-    "rollup": "^2.46.0",
+    "rollup": "^2.61.1",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-minify-es": "^1.1.1",
